# manu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.bak  cmake_install.cmake
lib/c/: c.c  c.h
lib/go/: go.h
lib/kotlin/: kotlin.c  kotlin.h
lib/python/: python.h
src/: main.c
src/go/: go.c
src/python/: python.c
